# dcs-pcs

./: README.md  pyproject.toml
scripts/: run_heavy.py  run_light.py
src/: __init__.py  summary.py
src/core/: __init__.py  grounding.py  halting.py  kripke.py  semantics.py
src/experiments/: __init__.py  depth_termination.py  halting_validation.py  kripke_sweep.py  liar_fixed_points.py
src/figures/: __init__.py  architecture.py  depth_scaling.py  grounding_curve.py  halting_heatmap.py  pcs_spectrum.py
