[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "dcs-pcs"
version         = "1.0.0"
description     = "Empirical validation suite for the Diagonal Constraint Structure and Practically Complete System"
readme          = "README.md"
license         = {text = "Apache-2.0"}
authors         = [{name = "Tasmai Keni", email = "tas.ken.rt25@dypatil.edu"}]
requires-python = ">=3.10"
dependencies    = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.urls]
Homepage   = "https://github.com/tasmaikeni13/dcs-pcs"
Paper      = "https://zenodo.org/records/19660523"

[project.scripts]
dcs-light = "scripts.run_light:main"
dcs-heavy = "scripts.run_heavy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]
